--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,6 +29,10 @@
                 <button class="btn btn-primary" id="btn-add-assignment">
                     <span>+ Add Assignment</span>
                 </button>
+                <button class="btn btn-secondary" id="seed-db-btn">
+                  <span>Seed Database</span>
+                </button>
+
             </div>
         </div>
     </header>
